# TodoAppFullStack

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 1533b7ee8fd5_inital_setup.py  78d9ada2a251_create_todo_table.py
app/: exceptions.py  main.py  schemas.py
app/auth/: authentication.py
app/db/: database.py  db_todos.py  db_user.py  hash.py  models.py
app/routes/: r_auth.py  r_user.py
tests/: conftest.py  test_main.py
tests/auth/: test_auth.py
tests/db/: test_db_todo.py  test_db_user.py
tests/routes/: test_r_auth.py  test_r_user.py
